<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.example.rocketdemo.GameView
        android:id="@+id/gv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/txt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:text="@string/txt_score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/txt_choose_gamemode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_choose_gamemode"
        android:textSize="30sp"
        android:layout_marginTop="250dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"/>
    <Button
        android:id="@+id/btn_normal_survival"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_normal_survival"
        android:padding="5dp"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/btn_boss_survival"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_boss_survival"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="inherit"
        android:layout_below="@id/btn_normal_survival"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/btn_campaign"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_campaign"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_boss_survival"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:textColor="#000000"/>
    <RelativeLayout
        android:id="@+id/rl_game_over"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_game_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_game_over"
            android:textSize="40sp"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/txt_game_over_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_game_over_score_default_text"
            android:textSize="100sp"
            android:layout_below="@+id/txt_game_over"
            android:textColor="#FFFFFF"
            android:layout_marginTop="50dp"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/txt_best_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_best_score_default_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_game_over_score"
            android:layout_marginTop="30dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_touch_screen_to_continue"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_best_score"
            android:layout_marginTop="100dp"
            android:textColor="#FFFFFF" />

    </RelativeLayout>
</RelativeLayout>