<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.example.rocketdemo.CampaignView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Button
        android:id="@+id/btn_lvl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level1"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/btn_lvl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level2"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_lvl1"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/btn_lvl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level3"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_lvl2"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/btn_lvl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level4"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_lvl3"
        android:layout_marginTop="50dp"
        android:background="#FFFFFF"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/txt_score_campaign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:text="@string/txt_score_campaign_default_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <RelativeLayout
        android:id="@+id/rl_game_over_c"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_level_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_level_complete"
            android:textSize="40sp"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/txt_game_over_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_game_over_c"
            android:textSize="40sp"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/txt_game_over_score_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_score_campaign_default_text"
            android:textSize="100sp"
            android:layout_below="@+id/txt_game_over_c"
            android:textColor="#FFFFFF"
            android:layout_marginTop="50dp"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/txt_best_score_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_best_score_c_default_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_game_over_score_c"
            android:layout_marginTop="30dp"
            android:textSize="20sp" />
        <ImageButton
            android:id="@+id/btn_to_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="700dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_menu_image"
            android:contentDescription="@string/img_btn_to_menu_content_description" />
        <ImageButton
            android:id="@+id/btn_restart_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="700dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_restart_image"
            android:contentDescription="@string/img_btn_restart_level" />
        <ImageButton
            android:id="@+id/btn_next_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="700dp"
            android:layout_marginStart="280dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_next_level_image"
            android:contentDescription="@string/img_btn_next_level" />

    </RelativeLayout>
</RelativeLayout>